--- a/paper_butler/basic/templates/basic/invoices.html
+++ b/paper_butler/basic/templates/basic/invoices.html
@@ -5,14 +5,16 @@
 		<link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
 	</head>
 	<body>
-		<h1>Items</h1>
+		<h1>Invoices</h1>
 		<hr>
 		<table id="items-table">
 			<thead>
 				<tr>
-					<th>Name</th>
-					<th>Code</th>
-					<th>Description</th>
+					<th>Upload Time</th>
+					<th>Deadline Date</th>
+					<th>Price</th>
+					<th>Name of Invoicer</th>
+					<th>Payed?</th>
 				</tr>
 			</thead>
 			<tbody></tbody>
@@ -24,7 +26,14 @@
 			$(document).ready(function () {
 				$('#items-table').dataTable({
 					serverSide: true,
-					sAjaxSource: "receipts"
+					sAjaxSource: "invoices_list",
+					columns: [
+                        {name: "upload_date_time", data: 0},
+                        {name: "deadline_date", data: 1},
+                        {name: "price", data: 2},
+                        {name: "name_of_invoicer", data: 3},
+                        {name: "payed", data: 4},
+                    ],
 				});
 			});
 		</script>
