--- a/paper_butler/basic/templates/basic/receipts.html
+++ b/paper_butler/basic/templates/basic/receipts.html
@@ -1,32 +1,46 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
-	</head>
-	<body>
-		<h1>Items</h1>
-		<hr>
-		<table id="items-table">
-			<thead>
-				<tr>
-					<th>Name</th>
-					<th>Code</th>
-					<th>Description</th>
-				</tr>
-			</thead>
-			<tbody></tbody>
-		</table>
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
+</head>
+<body>
+<h1>Receipts</h1>
+<hr>
+<table id="items-table">
+    <thead>
+    <tr>
+        <th>Upload Datetime</th>
+        <th>Buying Date</th>
+        <th>Name of Article</th>
+        <th>Name of Store</th>
+        <th>Price</th>
+        <th>Warranty expires at Expiry</th>
+    </tr>
+    </thead>
+    <tbody></tbody>
+</table>
 
-		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-		<script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-		<script language="javascript">
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+<script language="javascript">
 			$(document).ready(function () {
 				$('#items-table').dataTable({
 					serverSide: true,
-					sAjaxSource: "receipts"
+					sAjaxSource: "receipts_list",
+					columns: [
+                        {name: "upload_date_time", data: 0},
+                        {name: "buying_date", data: 1},
+                        {name: "name_of_article", data: 2},
+                        {name: "name_of_store", data: 3},
+                        {name: "price", data: 4},
+                        {name: "date_of_expiry", data: 5},
+                    ],
 				});
 			});
-		</script>
-	</body>
+
+
+
+</script>
+</body>
 </html>
