Tying everything together #7

--- a/paper_butler/basic/templates/basic/receipts.html
+++ b/paper_butler/basic/templates/basic/receipts.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
 </head>
 <body>
+{% include "basic/topbar.html" %}
 <h1>Receipts</h1>
 <hr>
 <table id="items-table">
