Making working prototype

--- a/paper_butler/basic/templates/basic/topbar.html
+++ b/paper_butler/basic/templates/basic/topbar.html
@@ -1,9 +1,6 @@
 <div>
-    <button onclick="location.href='upload_receipt'" type="button">
-        Upload Receipt
-    </button>
-    <button onclick="location.href='upload_invoice'" type="button">
-        Upload Invoice
+    <button onclick="location.href='upload_file'" type="button">
+        Upload File
     </button>
     <button onclick="location.href='invoices'" type="button">
         List of Invoices
