--- a/paper_butler/basic/templates/basic/topbar.html
+++ b/paper_butler/basic/templates/basic/topbar.html
@@ -1,11 +1,5 @@
 <div>
-    <button onclick="location.href='upload_file'" type="button">
-        Upload File
-    </button>
-    <button onclick="location.href='invoices'" type="button">
-        List of Invoices
-    </button>
-    <button onclick="location.href='receipts'" type="button">
-        List of Receipts
+    <button onclick="location.href='upload_document'" type="button">
+        Upload Document
     </button>
 </div>
