--- a/paper_butler/basic/templates/basic/overview.html
+++ b/paper_butler/basic/templates/basic/overview.html
@@ -12,7 +12,7 @@
 				<tr>
 					<th>Upload Time</th>
 					<th>Document Type</th>
-					<th>Exists Phyiscally</th>
+<!--					<th>Exists Phyiscally</th>-->
 				</tr>
 			</thead>
 			<tbody></tbody>
@@ -28,7 +28,7 @@
 					columns: [
                         {name: "upload_date_time", data: 0},
 						{name: "type", data: 1},
-                        {name: "physical_copy_Exists", data: 2},
+                        //{name: "physical_copy_Exists", data: 2},
                     ],
 				});
 			});
