--- a/paper_butler/basic/templates/basic/topbar.html
+++ b/paper_butler/basic/templates/basic/topbar.html
@@ -2,4 +2,7 @@
     <button onclick="location.href='upload_document'" type="button">
         Upload Document
     </button>
+    <button onclick="location.href='train'" type="button">
+        Train
+    </button>
 </div>
