--- a/paper_butler/basic/templates/basic/change_document.html
+++ b/paper_butler/basic/templates/basic/change_document.html
@@ -1,8 +1,31 @@
 {% if has_hr_id %}
-<p>You can store this document under the following ID: {{id}}</p>
+<p>This document is stored with the following ID: {{id}}</p>
 {% endif %}
-<form action={{ id }} method="post" enctype="multipart/form-data">
+<form id="change_document_form" action={{ id }} method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit"> Submit</button>
 </form>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+<script>
+    $(function () {
+        $('#id_type').change(function () {
+            $.ajax({
+                url: "{{id}}",
+                type: "PUT",
+                dataType: "json",
+                data: JSON.stringify({type: $('#id_type').val(),}),
+                headers: {
+                    "X-Requested-With": "XMLHttpRequest",
+                    "X-CSRFToken": "{{ csrf_token }}",  // don't forget to include the 'getCookie' function
+                },
+                success: (data) => {
+                    location.reload();
+                },
+                error: (error) => {
+                    console.log(error);
+                }
+            });
+        });
+    });
+</script>
