--- a/paper_butler/basic/templates/basic/topbar.html
+++ b/paper_butler/basic/templates/basic/topbar.html
@@ -2,13 +2,13 @@
     <button onclick="location.href='upload_document'" type="button">
         Upload Document
     </button>
-    <button onclick="location.href='livecamera'" type="button">
-        Live camera
-    </button>
-    <button onclick="location.href='train'" type="button">
-        Train
-    </button>
-    <button onclick="location.href='list'" type="button">
-        DataGrid
-    </button>
+<!--    <button onclick="location.href='livecamera'" type="button">-->
+<!--        Live camera-->
+<!--    </button>-->
+<!--    <button onclick="location.href='train'" type="button">-->
+<!--        Train-->
+<!--    </button>-->
+<!--    <button onclick="location.href='list'" type="button">-->
+<!--        DataGrid-->
+<!--    </button>-->
 </div>
