--- a/paper_butler/basic/templates/basic/upload_document.html
+++ b/paper_butler/basic/templates/basic/upload_document.html
@@ -1,5 +1,6 @@
+{% load crispy_forms_tags %}
 <form action="upload_document" method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form|crispy}}
     <button type="submit"> Submit</button>
 </form>
