--- a/paper_butler/basic/templates/basic/index.html
+++ b/paper_butler/basic/templates/basic/index.html
@@ -4,6 +4,8 @@
     {% load static %}
     <meta charset="UTF-8">
     <title>Paper Butler</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'basic/css/modal.css' %}">
 </head>
 <h2>Paper Butler</h2>
