--- a/paper_butler/basic/templates/basic/overview.html
+++ b/paper_butler/basic/templates/basic/overview.html
@@ -1,37 +1,85 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
-	</head>
-	<body>
-		<h1>Documents</h1>
-		<hr>
-		<table id="items-table">
-			<thead>
-				<tr>
-					<th>Upload Time</th>
-					<th>Document Type</th>
-<!--					<th>Exists Phyiscally</th>-->
-				</tr>
-			</thead>
-			<tbody></tbody>
-		</table>
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
+    <style>
+        body {font-family: Arial, Helvetica, sans-serif;}
 
-		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-		<script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-		<script>
-			$(document).ready(function () {
-				$('#items-table').dataTable({
-					serverSide: true,
-					sAjaxSource: "document_overview",
-					columns: [
-                        {name: "upload_date_time", data: 0},
-						{name: "type", data: 1},
-                        //{name: "physical_copy_Exists", data: 2},
-                    ],
-				});
-			});
-		</script>
-	</body>
+        /* The Modal (background) */
+        .modal {
+            display: none; /* Hidden by default */
+            position: fixed; /* Stay in place */
+            z-index: 1; /* Sit on top */
+            padding-top: 100px; /* Location of the box */
+            left: 0;
+            top: 0;
+            width: 100%; /* Full width */
+            height: 100%; /* Full height */
+            overflow: auto; /* Enable scroll if needed */
+            background-color: rgb(0,0,0); /* Fallback color */
+            background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+        }
+
+        /* Modal Content */
+        .modal-content {
+            background-color: #fefefe;
+            margin: auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+        }
+
+        /* The Close Button */
+        .close {
+            color: #aaaaaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: #000;
+            text-decoration: none;
+            cursor: pointer;
+        }
+    </style>
+</head>
+<body>
+<h1>Documents</h1>
+<hr>
+<table class="hover"  id="items-table">
+    <thead>
+    <tr>
+        <th>ID</th>
+        <th>Upload Time</th>
+        <th>Document Type</th>
+    </tr>
+    </thead>
+    <tbody></tbody>
+</table>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('#items-table').dataTable({
+            serverSide: true,
+            sAjaxSource: "document_overview",
+            columns: [
+                {name: "id", data: 0, searchable: false, visible: false},
+                {name: "upload_date_time", data: 1},
+                {name: "type", data: 2},
+                //{name: "physical_copy_Exists", data: 2},
+            ]
+        });
+        $('#items-table tbody').on('click', 'tr', function () {
+            var table = $('#items-table').DataTable();
+            var data = table.row(this).data();
+            location.href = "change_document/"+data[0]
+            // alert('You clicked on ' + data[0] + "'s row");
+        });
+    });
+</script>
+</body>
 </html>
